--- a/README.textile
+++ b/README.textile
@@ -1,13 +1,42 @@
-Este script parsea webs de perfiles de los diputados en
-"congreso.es":http://www.congreso.es/portal/page/portal/Congreso/Congreso/Diputados/BusqForm?_piref73_1333155_73_1333154_1333154.next_page=/wc/fichaDiputado?idDiputado=1&idLegislatura=10 y por cada ficha de diputado en el Congreso guarda:
-* Nombre completo
-* Legislatura
-* URL foto
-* Sexo
-* Fecha nacimiento
-* Lugar nacimiento
-* ...
+Este script parsea una de las webs de 
+"congreso.es":http://www.congreso.es/portal/page/portal/Congreso/Congreso/Diputados?_piref73_1333056_73_1333049_1333049.next_page=/wc/menuAbecedarioInicio&tipoBusqueda=completo&idLegislatura=11 y por cada diputado en el Congreso guarda:
 
-(en construcción)
+* su id unico en la web del Congreso
+* su nombre y apellidos
+* la URL de su perfil en la web del Congreso 
+* la URL de la foto de su perfil en la web del Congreso 
+* la URL a la Declaración de Bienes y de Actividades
+* El cargo que tiene (Diputado o Diputada) 
+* La posicion en sector, fila y butaca
+* Su correo electrónico
+* El partido y grupo parlamentario (si tiene alguno) al que pertenece
+* Su curriculum 
+* Su fecha de nacimiento
+* Su estado civil
+* La legislatura actual y las legislaturas anteriores en las que haya estado
+* Las comiciones en las que participa
+* La circunscripción a la que pertenece
+* Redes sociales: 
+** El nombre del usuario en twitter
+** La URL a su web personal
+** La URL a su perfil en Facebook
+** La URL a su perfil en Flickr
+** La URL a su perfil en Linkedin
+** La URL a su perfil en YouTube
+** La URL a su perfil en Instagram
 
-Las urls de las webs de los perfiles las coge de "este otro scraper":https://scraperwiki.com/scrapers/congreso_listado_de_diputados/ .
+Basado en el trabajo de @_pablog para la Legislatura X, adaptado para la XI. Se  han unificado estos scripts y se han migrado de "ScraperWiki":https://classic.scraperwiki.com/ a "morph.io":http://morph.io/ 
+* https://classic.scraperwiki.com/scrapers/congreso_listado_de_diputados/
+* https://classic.scraperwiki.com/scrapers/congreso_datos_diputado/
+
+h1. Desarrollo
+
+Para preparar el entorno de desarrollo y testing en local, con Ubuntu 14.04, recomendamos usar virtualenv y virtualenvwrapper. Una vez instalados y dentro de un entorno virtual, ejecutamos lo siguiente:
+
+bc. sudo apt-get install libxml2-dev libxslt1-dev python-dev
+pip install -r requirements.txt 
+
+h1. Producción
+
+Ver en "morph.io":https://morph.io/andreslucena/congreso_listado_de_diputados
+
